--- a/index.html
+++ b/index.html
@@ -4,8 +4,187 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Portal</title>
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z4G4fA7+7DXt659Q6S/ahlWXIC/0mV5QVF3l0uFI0Rt66r9wBorAI7p6SB6b7R9gqxD0yIrO0DkF1cJ55n1Yq/0" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="styleIndex.css">
+  </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <p class="navbar-brand">CarrierUp</p>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Job</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Companies</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                  </li>
+                  <button type="button" class="buttons" id="login">Login</button>
+                  <button type="button" class="buttons" id="register">Register</button>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      For Employers
+                    </a>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Buy Online</a></li>
+                    <li><a class="dropdown-item" href="#">Employer Login</a></li>
+                    </ul>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
+    </header>
     
+
+<main>
+<h1>Find your dream job now</h1>
+<h3>2 lakhs+ jobs for you to explore</h3>
+<div id="search-container">
+<div class="search-bar">
+  <div class="icon"></div>
+  <input type="text" placeholder="Enter skills / designations / companies">
+  <div class="divider"></div>
+  <select name="experience" id="experience">
+      <option>Select experience</option>
+      <option>0-1 years</option>
+      <option>1-3 years</option>
+      <option>3-5 years</option>
+      <option>5+ years</option>
+  </select>
+  <div class="divider"></div>
+  <input type="text" placeholder="Enter location">
+  <button>Search</button>
+</div>
+</div>
+
+<h4>Top Companies Hiring Now</h4>
+
+
+
+<div id="carouselExampleControls" class="carousel">
+  <div class="carousel-inner">
+      <div class="carousel-item active">
+          <div class="card">
+              <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+              <div class="card-body">
+                  <h5 class="card-title">Card title 1</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+          </div>
+      </div>
+      <div class="carousel-item">
+          <div class="card">
+              <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+              <div class="card-body">
+                  <h5 class="card-title">Card title 2</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+          </div>
+      </div>
+      <div class="carousel-item">
+          <div class="card">
+              <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+              <div class="card-body">
+                  <h5 class="card-title">Card title 3</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+          </div>
+      </div>
+      <div class="carousel-item">
+          <div class="card">
+              <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+              <div class="card-body">
+                  <h5 class="card-title">Card title 4</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+          </div>
+      </div>
+      <div class="carousel-item">
+          <div class="card">
+              <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+              <div class="card-body">
+                  <h5 class="card-title">Card title 5</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+          </div>
+      </div>
+      <div class="carousel-item">
+          <div class="card">
+              <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+              <div class="card-body">
+                  <h5 class="card-title">Card title 6</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+          </div>
+      </div>
+      <div class="carousel-item">
+          <div class="card">
+              <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+              <div class="card-body">
+                  <h5 class="card-title">Card title 7</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+          </div>
+      </div>
+      <div class="carousel-item">
+          <div class="card">
+              <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+              <div class="card-body">
+                  <h5 class="card-title">Card title 8</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+          </div>
+      </div>
+      <div class="carousel-item">
+          <div class="card">
+              <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+              <div class="card-body">
+                  <h5 class="card-title">Card title 9</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+          </div>
+      </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
+</main>
 </body>
 </html>
