--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div id="search-container">
 <div class="search-bar">
   <div class="icon"></div>
-  <input type="text" placeholder="Enter skills / designations / companies">
+  <input type="text" placeholder="Enter skills / companies">
   <div class="divider"></div>
   <select name="experience" id="experience">
       <option>Select experience</option>
@@ -183,6 +183,125 @@
       <span class="visually-hidden">Next</span>
   </button>
 </div>
+<div class="view-all-comp"><button type="button" class="button">View all Companies</button></div>
+
+<div class="container my-5">
+  <h2>Upcoming events and challenges</h2>
+  <div class="row">
+      <div class="col-md-4">
+          <img src="path_to_your_image" alt="Event Image" class="img-fluid rounded-circle">
+      </div>
+      <div class="col-md-8">
+          <div class="row">
+              <div class="col-md-6 mb-4">
+                  <div class="card">
+                      <div class="card-header">
+                          <small class="text-muted">Entry closes in 5d</small>
+                          <span class="badge bg-primary float-end">Hiring challenge</span>
+                      </div>
+                      <div class="card-body">
+                          <h5 class="card-title">.Net Azure Innovator</h5>
+                          <p class="card-subtitle mb-2 text-muted">Grid Dynamics</p>
+                          <div class="tags mb-3">
+                              <span class="badge bg-secondary">.NET</span>
+                              <span class="badge bg-secondary">Azure Cloud</span>
+                              <span class="badge bg-secondary">SQL Server</span>
+                              <span class="badge bg-secondary">Aks Deploy</span>
+                          </div>
+                          <p><i class="fa fa-calendar"></i> 24 Jul, 10:00 AM &nbsp; <i class="fa fa-user"></i> 65 Enrolled</p>
+                          <a href="#" class="btn btn-outline-primary btn-sm">Job offer</a>
+                          <a href="#" class="btn btn-link btn-sm float-end">View details</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-6 mb-4">
+                  <div class="card">
+                      <div class="card-header">
+                          <small class="text-muted">Entry closes in 2d</small>
+                          <span class="badge bg-success float-end">Webinar</span>
+                      </div>
+                      <div class="card-body">
+                          <h5 class="card-title">Resume tips to get you shortlisted for SDE roles at Amazon</h5>
+                          <p class="card-subtitle mb-2 text-muted">Coding Ninjas</p>
+                          <p><i class="fa fa-calendar"></i> 26 Jul, 7:00 PM &nbsp; <i class="fa fa-user"></i> 8.6K Enrolled</p>
+                          <a href="#" class="btn btn-outline-primary btn-sm">Learn from experts</a>
+                          <a href="#" class="btn btn-link btn-sm float-end">View details</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<footer class="footer mt-auto py-3 bg-light">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-3">
+              <img src="path_to_logo_image" alt="CarrierUp" class="img-fluid mb-3">
+              <p>Connect with us</p>
+              <div class="social-icons">
+                  <a href="#"><i class="fab fa-facebook"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-linkedin"></i></a>
+              </div>
+          </div>
+          <div class="col-md-3">
+              <ul class="list-unstyled">
+                  <li><a href="#">About us</a></li>
+                  <li><a href="#">Careers</a></li>
+                  <li><a href="#">Employer home</a></li>
+                  <li><a href="#">Sitemap</a></li>
+                  <li><a href="#">Credits</a></li>
+              </ul>
+          </div>
+          <div class="col-md-3">
+              <ul class="list-unstyled">
+                  <li><a href="#">Help center</a></li>
+                  <li><a href="#">Summons/Notices</a></li>
+                  <li><a href="#">Grievances</a></li>
+                  <li><a href="#">Report issue</a></li>
+              </ul>
+          </div>
+          <div class="col-md-3">
+              <ul class="list-unstyled">
+                  <li><a href="#">Privacy policy</a></li>
+                  <li><a href="#">Terms & conditions</a></li>
+                  <li><a href="#">Fraud alert</a></li>
+                  <li><a href="#">Trust & safety</a></li>
+              </ul>
+          </div>
+      </div>
+      <div class="row mt-4">
+          <div class="col-md-6">
+              <h5>Apply on the go</h5>
+              <p>Get real-time job updates on our App</p>
+              <div>
+                  <a href="#"><img src="path_to_google_play_image" alt="Google Play"></a>
+                  <a href="#"><img src="path_to_app_store_image" alt="App Store"></a>
+              </div>
+          </div>
+          <div class="col-md-6 text-end">
+              <div class="d-flex justify-content-end">
+                  <img src="path_to_infoedge_logo" alt="Info Edge Logo" class="img-fluid me-2">
+                  <div>
+                      <p>All trademarks are the property of their respective owners</p>
+                      <p>All rights reserved © 2024 Info Edge (India) Ltd.</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="row mt-3">
+          <div class="col text-center">
+              <p>Our businesses</p>
+              <a href="#"><img src="path_to_irigulf_logo" alt="Irigulf Logo"></a>
+              <a href="#"><img src="path_to_shiksha_logo" alt="Shiksha Logo"></a>
+              <a href="#"><img src="path_to_iimjobs_logo" alt="IIM Jobs Logo"></a>
+          </div>
+      </div>
+  </div>
+</footer>
 
 
 </main>
