--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <p class="navbar-brand"> <img src="carrierup.png" alt="CarrierUp" id="img1"></p>
+                <p class="navbar-brand"> <img src="pics/carrierup.png" alt="CarrierUp" id="img1"></p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -40,8 +40,8 @@
                             <a class="nav-link" href="#">Services</a>
                         </li>
                         <div class="nav-buttons">
-                        <button type="button" class="buttons" id="login">Login</button>
-                        <button type="button" class="buttons" id="register">Register</button></div>
+                        <a href="login.html"><button type="button" class="buttons" id="login">Login</button></a>
+                        <a href="register.html"><button type="button" class="buttons" id="register">Register</button></a></div>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -209,7 +209,7 @@
             <h2>Upcoming events and challenges</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="events.jpg" alt="Event Image" class="img-fluid">
+                    <img src="pics/events.jpg" alt="Event Image" class="img-fluid">
                 </div>
                 <div class="col-md-8">
                     <div class="row">
@@ -309,7 +309,7 @@
             <div class="container-footer">
                 <div class="row">
                     <div class="col-md-3" id="connect-with-us">
-                        <img src="carrierup.png" alt="CarrierUp" class="img-fluid mb-3" id="img2">
+                        <img src="pics/carrierup.png" alt="CarrierUp" class="img-fluid mb-3" id="img2">
                         <p id="p1">Connect with us</p>
                         <div class="social-icons">
                             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -320,8 +320,8 @@
                     </div>
                     <div class="col-md-3">
                         <ul class="list-unstyled">
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Careers</a></li>
+                            <li><a href="https://www.infoedge.in/">About us</a></li>
+                            <li><a href="https://careers.infoedge.com/#!/">Careers</a></li>
                             <li><a href="#">Employer home</a></li>
                             <li><a href="#">Sitemap</a></li>
                         </ul>
@@ -343,6 +343,7 @@
                         </ul>
                     </div>
                 </div>
+                <hr>
                 <div class="row mt-4">
                         <div class="p2">
                                 <p id="p2">All trademarks are the property of their respective owners</p>
