Sitemap page added

--- a/index.html
+++ b/index.html
@@ -323,12 +323,12 @@
                             <li><a href="https://www.infoedge.in/">About us</a></li>
                             <li><a href="https://careers.infoedge.com/#!/">Careers</a></li>
                             <li><a href="#">Employer home</a></li>
-                            <li><a href="#">Sitemap</a></li>
+                            <li><a href="sitemap.html">Sitemap</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3">
                         <ul class="list-unstyled">
-                            <li><a href="#">Help center</a></li>
+                            <li><a href="#">Feedback</a></li>
                             <li><a href="#">Summons/Notices</a></li>
                             <li><a href="#">Grievances</a></li>
                             <li><a href="#">Report issue</a></li>
