Database creation code added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         integrity="sha512-z4G4fA7+7DXt659Q6S/ahlWXIC/0mV5QVF3l0uFI0Rt66r9wBorAI7p6SB6b7R9gqxD0yIrO0DkF1cJ55n1Yq/0"
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="index.js"></script>
+        
+        <script src="index.js"></script>
     <link rel="stylesheet" href="styleIndex.css">
 </head>
 
@@ -52,7 +53,10 @@
                                 <li><a class="dropdown-item" href="#">Employer Login</a></li>
                             </ul>
                         </li>
-                    </ul>
+                        <li class="nav-item">
+                            <a href="profile.html"><i class="fa fa-user-circle-o" ></i></a>
+                        </li>                   
+                     </ul>
                 </div>
             </div>
         </nav>
@@ -304,7 +308,6 @@
             </div>
         </div>
 
-
         <footer class="footer mt-auto py-3 bg-light">
             <div class="container-footer">
                 <div class="row">
@@ -312,10 +315,10 @@
                         <img src="pics/carrierup.png" alt="CarrierUp" class="img-fluid mb-3" id="img2">
                         <p id="p1">Connect with us</p>
                         <div class="social-icons">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100013915323747"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/nouman_khan_innocent?igsh=MTE2NGRsYW84OGF2Mg=="><i class="fa fa-instagram"></i></a>
+                            <a href="https://github.com/NoumanKhan2003"><i class="fa fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/nouman-khan-95923a256?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa fa-linkedin"></i></a>
                         </div>
                     </div>
                     <div class="col-md-3">
