--- a/register.html
+++ b/register.html
@@ -8,46 +8,41 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styleRegister.css">
+    <script src="register.js"></script>
 </head>
-<link rel="stylesheet" href="styleRegister.css">
 <body>
     <div class="registration-page-background pt-5 pb-5">
         <div class="container">
             <div class="row d-flex flex-row justify-content-center">
                 <div class="col-12 col-md-6">
-
                     <div class="registration-form">
                         <h1 class="registration-form-heading">Register Here</h1>
-                        <form action="#" method="post">
+                        <form id="registrationForm" method="post" action="register.php">
                             <p class="form-name">Full Name : </p>
-                            <input type="text" class="r-form-fill-box" name="name" placeholder="Full Name">
-                            <p class="form-name">User Name : </p>
-                            <input type="text" class="r-form-fill-box" name="username" placeholder="User Name">
+                            <input type="text" class="r-form-fill-box" name="name" placeholder="Full Name" >
                             <p class="form-name">Mobile Number : </p>
-                            <input type="text" class="r-form-fill-box" name="mobile" placeholder="Mobile Number">
+                            <input type="text" class="r-form-fill-box" name="mobile" placeholder="Mobile Number" >
                             <p class="form-name">Email : </p>
-                            <input type="email" class="r-form-fill-box" name="email" placeholder="Email">
+                            <input type="email" class="r-form-fill-box" name="email" placeholder="Email" >
                             <p class="form-name">Password : </p>
-                            <input type="password" class="r-form-fill-box" name="password" placeholder="Password">
+                            <input type="password" class="r-form-fill-box" name="password" placeholder="Password" >
                             <p class="form-name">Confirm Password : </p>
-                            <input type="password" class="r-form-fill-box" name="confirmPassword" placeholder="Confirm Password">
+                            <input type="password" class="r-form-fill-box" name="confirmPassword" placeholder="Confirm Password" >
                             <div class="button-container">
-                                <button class="r-registration-submit-button" type="button">Send OTP</button>
+                                <button class="r-registration-submit-button" type="button" id="otpButton">Send OTP</button>
                             </div>
                             <p id="message">Click to send OTP</p>
                             <p class="form-name">Enter OTP : </p>
-                            <input type="text" class="r-form-fill-box" name="enterotp" placeholder="Enter OTP">
+                            <input type="text" class="r-form-fill-box" name="otp" placeholder="Enter OTP" >
                             <div class="button-container mb-3">
-                                <button class="r-registration-submit-button" type="submit">Submit</button>
+                                <button class="r-registration-submit-button" type="submit" id="submitButton">Submit</button>
                             </div>
-
                         </form>
                     </div>
-
                 </div>
             </div>
         </div>
-
     </div>
 </body>
 </html>
