--- a/register.html
+++ b/register.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <title>Registration page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styleRegister.css">
-    <script src="register.js"></script>
 </head>
 <body>
     <div class="registration-page-background pt-5 pb-5">
@@ -18,31 +17,89 @@
                 <div class="col-12 col-md-6">
                     <div class="registration-form">
                         <h1 class="registration-form-heading">Register Here</h1>
-                        <form id="registrationForm" method="post" action="register.php">
+                        <form id="registrationForm" action="register.php" method="post">
                             <p class="form-name">Full Name : </p>
-                            <input type="text" class="r-form-fill-box" name="name" placeholder="Full Name" >
+                            <input type="text" class="r-form-fill-box" name="name" placeholder="Full Name" required>
                             <p class="form-name">Mobile Number : </p>
-                            <input type="text" class="r-form-fill-box" name="mobile" placeholder="Mobile Number" >
+                            <input type="number" class="r-form-fill-box" name="mobile" placeholder="Mobile Number" required>
                             <p class="form-name">Email : </p>
-                            <input type="email" class="r-form-fill-box" name="email" placeholder="Email" >
+                            <input type="email" class="r-form-fill-box" name="email" placeholder="Email" required>
                             <p class="form-name">Password : </p>
-                            <input type="password" class="r-form-fill-box" name="password" placeholder="Password" >
-                            <p class="form-name">Confirm Password : </p>
-                            <input type="password" class="r-form-fill-box" name="confirmPassword" placeholder="Confirm Password" >
+                            <input type="password" class="r-form-fill-box" name="password" placeholder="Password" required>
+                           
                             <div class="button-container">
                                 <button class="r-registration-submit-button" type="button" id="otpButton">Send OTP</button>
                             </div>
-                            <p id="message">Click to send OTP</p>
-                            <p class="form-name">Enter OTP : </p>
-                            <input type="text" class="r-form-fill-box" name="otp" placeholder="Enter OTP" >
-                            <div class="button-container mb-3">
-                                <button class="r-registration-submit-button" type="submit" id="submitButton">Submit</button>
-                            </div>
+                            <p id="message"></p>
                         </form>
+                        <div id="otpForm">
+                            <p>Enter OTP:</p>
+                            <input type="number" id="otpInput" placeholder="Enter OTP" required>
+                            <button class="r-registration-submit-button" type="button" id="verifyOtpButton">Verify OTP</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            let otpButton = document.getElementById("otpButton");
+            let otpForm = document.getElementById("otpForm");
+            let message = document.getElementById("message");
+
+            otpButton.addEventListener("click", function() {
+    let formData = new FormData(document.getElementById("registrationForm"));
+
+    // Debug: Log form data
+    for (let [key, value] of formData.entries()) {
+        console.log(`${key}: ${value}`);
+    }
+
+    fetch('register.php', {
+        method: 'POST',
+        body: formData
+    })
+    .then(response => response.text())
+    .then(data => {
+        console.log("Response from server:", data);
+        if (data.includes("OTP sent successfully")) {
+            message.textContent = "OTP sent successfully! Please check your email.";
+            otpForm.style.display = 'block';
+        } else {
+            message.textContent = "Error sending OTP. Please try again. Server response: " + data;
+        }
+    })
+    .catch(error => {
+        console.error('There was a problem with the fetch operation:', error);
+    });
+});
+
+
+            document.getElementById("verifyOtpButton").addEventListener("click", function() {
+                let otp = document.getElementById("otpInput").value;
+                let email = document.querySelector('input[name="email"]').value;
+                let formData = new URLSearchParams();
+                formData.append('otp', otp);
+                formData.append('email', email);
+
+                fetch('register.php', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded'
+                    },
+                    body: formData
+                })
+                .then(response => response.text())
+                .then(data => {
+                    console.log("Response from server:", data); 
+                    message.textContent = data;
+                })
+                .catch(error => {
+                    console.error('There was a problem with the fetch operation:', error);
+                });
+            });
+        });
+    </script>
 </body>
 </html>
