--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
                             </div>
                             <p id="message"></p>
                         </form>
-                        <div id="otpForm">
+                        <div id="otpForm" style="display: none;">
                             <p>Enter OTP:</p>
                             <input type="number" id="otpInput" placeholder="Enter OTP" required>
                             <button class="r-registration-submit-button" type="button" id="verifyOtpButton">Verify OTP</button>
@@ -49,39 +49,37 @@
             let message = document.getElementById("message");
 
             otpButton.addEventListener("click", function() {
-    let formData = new FormData(document.getElementById("registrationForm"));
+                let formData = new FormData(document.getElementById("registrationForm"));
 
-    // Debug: Log form data
-    for (let [key, value] of formData.entries()) {
-        console.log(`${key}: ${value}`);
-    }
+                // Debug: Log form data
+                for (let [key, value] of formData.entries()) {
+                    console.log(`${key}: ${value}`);
+                }
 
-    fetch('register.php', {
-        method: 'POST',
-        body: formData
-    })
-    .then(response => response.text())
-    .then(data => {
-        console.log("Response from server:", data);
-        if (data.includes("OTP sent successfully")) {
-            message.textContent = "OTP sent successfully! Please check your email.";
-            otpForm.style.display = 'block';
-        } else {
-            message.textContent = "Error sending OTP. Please try again. Server response: " + data;
-        }
-    })
-    .catch(error => {
-        console.error('There was a problem with the fetch operation:', error);
-    });
-});
-
+                fetch('register.php', {
+                    method: 'POST',
+                    body: formData
+                })
+                .then(response => response.text())
+                .then(data => {
+                    console.log("Response from server:", data);
+                    if (data.includes("OTP sent successfully")) {
+                        message.textContent = "OTP sent successfully! Please check your email.";
+                        otpForm.style.display = 'block';
+                    } else {
+                        message.textContent = "Error sending OTP. Please try again. Server response: " + data;
+                    }
+                })
+                .catch(error => {
+                    console.error('There was a problem with the fetch operation:', error);
+                });
+            });
 
             document.getElementById("verifyOtpButton").addEventListener("click", function() {
                 let otp = document.getElementById("otpInput").value;
                 let email = document.querySelector('input[name="email"]').value;
-                let formData = new URLSearchParams();
+                let formData = new URLSearchParams(new FormData(document.getElementById("registrationForm")));
                 formData.append('otp', otp);
-                formData.append('email', email);
 
                 fetch('register.php', {
                     method: 'POST',
