--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
                     </div>
                     <div class="col-md-3">
                         <ul class="list-unstyled">
-                            <li><a href="privacy.html">Privacy policy</a></li>
-                            <li><a href="#">Terms & conditions</a></li>
+                            <li><a href="privacyPolicy.html">Privacy policy</a></li>
+                            <li><a href="terms.html">Terms & conditions</a></li>
                             <li><a href="#">Fraud alert</a></li>
                             <li><a href="#">Trust & safety</a></li>
                         </ul>
