--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     </div>
                     <div class="col-md-3">
                         <ul class="list-unstyled">
-                            <li><a href="#">Feedback</a></li>
+                            <li><a href="feedback.html">Feedback</a></li>
                             <li><a href="#">Summons/Notices</a></li>
                             <li><a href="#">Grievances</a></li>
                             <li><a href="#">Report issue</a></li>
