--- a/feedback.html
+++ b/feedback.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Please submit your valuable Feedback </h1>
     <div class="container">
-        <form id="feedbackForm">
+        <form id="feedbackForm" action="feedback.php" method="post">
             <div class="form-group side-by-side">
                 <div>
                     <label for="name">Name:</label>
