Report issue and grievances pages added

--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
                         <ul class="list-unstyled">
                             <li><a href="feedback.html">Feedback</a></li>
                             <li><a href="#">Summons/Notices</a></li>
-                            <li><a href="#">Grievances</a></li>
-                            <li><a href="#">Report issue</a></li>
+                            <li><a href="grievances.html">Grievances</a></li>
+                            <li><a href="report.html">Report issue</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3">
