Fraud alert page added

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         <ul class="list-unstyled">
                             <li><a href="privacyPolicy.html">Privacy policy</a></li>
                             <li><a href="terms.html">Terms & conditions</a></li>
-                            <li><a href="#">Fraud alert</a></li>
+                            <li><a href="fraudAlert.html">Fraud alert</a></li>
                             <li><a href="#">Trust & safety</a></li>
                         </ul>
                     </div>
