trust and safety page added

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                             <li><a href="privacyPolicy.html">Privacy policy</a></li>
                             <li><a href="terms.html">Terms & conditions</a></li>
                             <li><a href="fraudAlert.html">Fraud alert</a></li>
-                            <li><a href="#">Trust & safety</a></li>
+                            <li><a href="trustAndSafety.html">Trust & safety</a></li>
                         </ul>
                     </div>
                 </div>
