resume page added

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Job</a>
+                            <a class="nav-link active" aria-current="page" href="jobs.html">Jobs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Companies</a>
+                            <a class="nav-link" href="events.html">Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="resumeInput.html">Resume</a>
                         </li>
+
                         <div class="nav-buttons">
                         <a href="login.html"><button type="button" class="buttons" id="login">Login</button></a>
                         <a href="register.html"><button type="button" class="buttons" id="register">Register</button></a></div>
@@ -71,7 +72,7 @@
                 <div class="icon"></div>
                 <input type="text" placeholder="Enter skills / companies">
                 <div class="divider"></div>
-                <select name="experience" id="experience">
+                <select title="experience" name="experience" id="experience">
                     <option class="options">Select experience</option>
                     <option class="options">0-1 years</option>
                     <option class="options">1-3 years</option>
