--- a/sitemap.html
+++ b/sitemap.html
@@ -22,22 +22,20 @@
                     <h1 class="sitemap-links-heading">Information</h1>
                     <ul class="sitemap-liks-list">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="">About Us</a></li>
-                        <li><a href="">Career with us</a></li>
-                        <li><a href="">Contact Us</a></li>
-                        <li><a href=""> Blog</a></li>
-                        <li><a href=""> Job speak</a></li>
-                        <li><a href="">Terms & Conditions</a></li>
-                        <li><a href="">Privacy Policy</a></li>
-                        <li><a href="">Feedback</a></li>
+                        <li><a href="index.html">About Us</a></li>
+                        <li><a href="jobs.html">Career with us</a></li>
+                        <li><a href="https://github.com/NoumanKhan2003">Contact Us</a></li>
+                        <li><a href="terms.html">Terms & Conditions</a></li>
+                        <li><a href="privacyPolicy.html">Privacy Policy</a></li>
+                        <li><a href="feedback.html">Feedback</a></li>
                     </ul>
                     <h1 class="sitemap-links-heading">Job Seekers Section</h1>
                     <ul class="sitemap-liks-list">
                         <li><a href="register.html">Register</a></li>
                         <li><a href="login.html">Login</a></li>
-                        <li><a href="">Advanced Search</a></li>
-                        <li><a href="">Create Job Alert</a></li>
-                        <li><a href="">Jobseekers FAQs</a></li>
+                        <li><a href="index.html">Advanced Search</a></li>
+                        <li><a href="jobs.html">Create Job Alert</a></li>
+                        <li><a href="privacyPolicy.html">Jobseekers FAQs</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md-3">
@@ -56,28 +54,28 @@
                     </ul>
                     <h1 class="sitemap-links-heading">CarrierUp Navigator</h1>
                     <ul class="sitemap-liks-list">
-                        <li><a href="">Career Navigator</a></li>
+                        <li><a href="index.html">Career Navigator</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md-3">
                     <h1 class="sitemap-links-heading">CarrierUp Fast Forward</h1>
                     <ul class="sitemap-liks-list">
                         <li><a href="resume.html">Resume Writing</a></li>
-                        <li><a href="">Resume Samples</a></li>
-                        <li><a href="">Resume Sample for Freshers</a></li>
-                        <li><a href="">Visual Resume Samples</a></li>
-                        <li><a href="">Cover Letter Samples</a></li>
-                        <li><a href="">Job Letter Samples</a></li>
-                        <li><a href="">Resume Quality Score</a></li>
-                        <li><a href="">Recruiter Connection</a></li>
-                        <li><a href="">Jobs4U</a></li>
-                        <li><a href="">Career Advice</a></li>
+                        <li><a href="resume.html">Resume Samples</a></li>
+                        <li><a href="resume.html">Resume Sample for Freshers</a></li>
+                        <li><a href="resume.html">Visual Resume Samples</a></li>
+                        <li><a href="resume.html">Cover Letter Samples</a></li>
+                        <li><a href="resume.html">Job Letter Samples</a></li>
+                        <li><a href="resume.html">Resume Quality Score</a></li>
+                        <li><a href="jobs.html">Recruiter Connection</a></li>
+                        <li><a href="jobs.html">Jobs4U</a></li>
+                        <li><a href="jobs.html">Career Advice</a></li>
                         <li><a href="">FAQs</a></li>
-                        <li><a href="">Contact us</a></li>
+                        <li><a href="https://github.com/NoumanKhan2003">Contact us</a></li>
                     </ul>
                     <h1 class="sitemap-links-heading">CarrierUp Learning</h1>
                     <ul class="sitemap-liks-list">
-                        <li><a href="">Online Courses & Certifications</a></li>
+                        <li><a href="jobs.html">Online Courses & Certifications</a></li>
                         <li><a href="">Online Courses</a></li>
                         <li><a href="">Online Aptitude Test</a></li>
                         <li><a href="">Career Advice</a></li>
@@ -86,12 +84,12 @@
                 <div class="col-6 col-md-3">
                     <h1 class="sitemap-links-heading">CarrierUp Recruiter</h1>
                     <ul class="sitemap-liks-list">
-                        <li><a href="">Register/ Login</a></li>
+                        <li><a href="login.html">Register/ Login</a></li>
                     </ul>
                     <h1 class="sitemap-links-heading">CarrierUp Recruiter</h1>
                     <ul class="sitemap-liks-list">
                         <li><a href="">Register</a></li>
-                        <li><a href="">Login</a></li>
+                        <li><a href="login.html">Login</a></li>
                         <li><a href="">Recruiters FAQs</a></li>
                     </ul>
                     <h1 class="sitemap-links-heading">Recruiters Products</h1>
