Employer register and login page added

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                                 For Employers
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Buy Online</a></li>
-                                <li><a class="dropdown-item" href="#">Employer Login</a></li>
+                                <li><a class="dropdown-item" href="employerRegister.html">Employer Registration</a></li>
+                                <li><a class="dropdown-item" href="employerLogin.html">Employer Login</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
