forget password pages added for both job seekers and employers

--- a/employerRegister.html
+++ b/employerRegister.html
@@ -31,7 +31,7 @@
                             </div>
                             <p id="message"></p>
                         </form>
-                        <div id="otpForm" style="display: none;">
+                        <div id="otpForm">
                             <p>Enter OTP:</p>
                             <input type="number" id="otpInput" placeholder="Enter OTP" required>
                             <button class="r-registration-submit-button" type="button" id="verifyOtpButton">Verify OTP</button>
