search button activated

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main>
         <h1>Find your dream job now</h1>
         <h3>2 lakhs+ jobs for you to explore</h3>
-       <form action="search.html">
+       <form action="login.html">
         <div id="search-container">
             <div class="search-bar">
                 <div class="icon"></div>
