Website name Corrected

--- a/fraudAlert.html
+++ b/fraudAlert.html
@@ -13,14 +13,14 @@
 <body>
     <div class="fake-job-bg-container pb-5">
         <div class="top-section-bg d-md-none">
-            <h1 class="top-section-main-heading">Welcome to CarrierUp.com Security Center</h1>
+            <h1 class="top-section-main-heading">Welcome to CareerUp.com Security Center</h1>
             <p class="top-section-description">We are committed to making your job search a safe and fraud-free experience. However, we would suggest you to be cautious of fraudent emails and calls.</p>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-12 pt-5 pb-5 d-none d-md-block">
                     <div class="top-section-md-bg text-center">
-                        <h1 class="top-section-md-main-heading">Welcome to CarrierUp.com Security Center</h1>
+                        <h1 class="top-section-md-main-heading">Welcome to CareerUp.com Security Center</h1>
                         <p class="top-section-md-description">We are committed to making your job search a safe and fraud-free experience. However, we would suggest you to be cautious of fraudent emails and calls.</p>
                     </div>
                 </div>
