UI updated for jobs and events pages

--- a/fraudAlert.html
+++ b/fraudAlert.html
@@ -79,7 +79,7 @@
                            <strong>noumanyt2003@gmail.com</strong> 
                         </p>
                         <p class="fake-job-list">OR</p>
-                        <button type="button" class="login-and-report-button btn btn-primary" id="login">LOGIN AND REPORT</button>
+                        <button type="button" class="report-button btn btn-primary" id="report">REPORT</button>
                     </div>
                 </div>
             </div>
@@ -87,9 +87,9 @@
     </div>    
 </body>
 <script>
-    let login = document.getElementById("login")
-    login.addEventListener("click", function(){
-        location.replace("login.html")
+    let report = document.getElementById("report")
+    report.addEventListener("click", function(){
+        location.replace("report.html")
     });
 </script>
 </html>
